tests/fixtures/valid/ignored/builtins/any.py
# Valid any() calls
# Auto-generated by scripts/generate_tests.py

b0_any_str = any("hello")
b1_any_bytes = any(b"hello")
b2_any_list = any([1, 2, 3])
b3_any_dict = any({"a": 1})
b4_any_set = any({1, 2, 3})

print("any() tests passed!")
