tests/fixtures/invalid/pow_float_dict_list.py
# Cannot call pow() with Float, Dict[str, int], List[int]
x = pow(1.0, {"a": 1}, [1, 2, 3])
